--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "~3.3.5",
+    "animate.css": "~3.4.0"
+  }
 }
