--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "animate.css": "~3.4.0"
+    "animate.css": "~3.4.0",
+    "typed.js": "~1.1.1"
   }
 }
