--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "animate.css": "~3.4.0",
-    "typed.js": "~1.1.1",
-    "Materialize": "materialize#~0.97.1"
+    "typed.js": "~1.1.1"
   }
 }
