--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "animate.css": "~3.4.0",
-    "typed.js": "~1.1.1"
+    "typed.js": "~1.1.1",
+    "semantic": "semantic-ui#~2.1.5"
   }
 }
