--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jberry93/jberry93.github.io#readme",
   "dependencies": {
-    "live-server": "^0.9.1"
+    "live-server": "^0.9.1",
+    "milligram": "^1.1.0"
   }
 }
