--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "homepage": "https://github.com/jberry93/jberry93.github.io#readme",
   "dependencies": {
     "live-server": "^0.9.1",
-    "milligram": "^1.1.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "milligram": "^1.1.0"
   }
 }
