--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/jberry93/jberry93.github.io#readme",
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-minify-html": "^1.0.5",
     "live-server": "^0.9.1",
     "milligram": "^1.1.0"
   }
