--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "font-awesome": "^4.6.3",
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.15.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
