--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-node_modules/babel
-node_modules/babel-core
-node_modules/babel-loader
-node_modules/babel-preset-es2015
-node_modules/babel-preset-react
-node_modules/jsx-loader
-node_modules/react
-node_modules/react-dom
-node_modules/react-tap-event-plugin
-node_modules/webpack
-node_modules/webpack-dev-server
+node_modules
