feat(deploy): test deployment of production bundle

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "dev": "next -p 4836",
         "build": "next build",
+        "export": "next export",
+        "generate": "next build && next export",
         "start": "next start"
     },
     "repository": {
