--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "author": "Jeffrey Berry <jeffreyberry93@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-sass": "^2.3.2",
-    "live-server": "^1.1.0"
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-sass": "^4.1.0",
+    "live-server": "^1.2.1"
   }
 }
